# crypto2016

lista2/: CMakeLists.txt  CipherCtxHandler.hpp  Cracker.hpp  main.cpp  main_1.cpp  main_2.cpp  main_test.cpp  utils.hpp
lista4/: database.db  index.js  login.js  package.json  user.js
